# admixedMOSGWA

./: .gitignore  CHANGES.txt  CMakeLists.txt  INSTALL.txt  README.txt
src/: AMdata.cpp  AMdata.hpp  AModel.cpp  AModel.hpp  AdmixtureSearch.cpp  AdmixtureSearch.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp  ExceptionTest.cpp  Firthimizer.cpp  Firthimizer.hpp  FirthimizerTest.cpp  GA.cpp  GA.hpp  GenotypeFreq.cpp  GenotypeFreq.hpp  Helpfull.cpp  Helpfull.hpp  Individual.cpp  Individual.hpp  Log.cpp  Log.hpp  MData.cpp  MData.hpp  Model.cpp  Model.hpp  OneSnpAllInd.hpp  Parameter.cpp  Parameter.hpp  PermSort.hpp  Pool.cpp  Pool.hpp  QRuncher.cpp  QRuncher.hpp  QRuncherTest.cpp  SNP.cpp  SNP.hpp  ScoreTestShortcut.cpp  ScoreTestShortcut.hpp  (+17 more)
src/imputation/: CMakeLists.txt  package.hpp
src/io/: CMakeLists.txt  CachedInput.cpp  CachedInput.hpp  DescriptorInput.cpp  DescriptorInput.hpp  DescriptorOutput.cpp  DescriptorOutput.hpp  Hdf5Constants.cpp  Hdf5Constants.hpp  Hdf5Input.cpp  Hdf5Input.hpp  Hdf5InputCo.cpp  Hdf5InputCo.hpp  Hdf5InputTest.cpp  Hdf5Object.cpp  Hdf5Object.hpp  Hdf5Object.tpl  Hdf5ObjectTest.cpp  Hdf5Output.cpp  Hdf5Output.hpp  Hdf5OutputTest.cpp  IOHelper.cpp  IOHelper.hpp  Input.cpp  Input.hpp  InputAdapter.cpp  InputAdapter.hpp  InputCo.cpp  InputCo.hpp  Output.cpp  Output.hpp  OutputAdapter.cpp  OutputAdapter.hpp  PlinkConstants.cpp  PlinkConstants.hpp  PlinkInput.cpp  PlinkInput.hpp  PlinkInputTest.cpp  PlinkOutput.cpp  PlinkOutput.hpp  (+6 more)
src/io/hdf5/: CMakeLists.txt  Dataset.cpp  Dataset.hpp  Dataspace.hpp  Dataspace.tpl  Datatype.cpp  Datatype.hpp  DoubleList.cpp  DoubleList.hpp  DoubleListTest.cpp  DoubleTable.cpp  DoubleTable.hpp  DoubleTableTest.cpp  File.cpp  File.hpp  Hdf5TestSuite.cpp  Hdf5TestSuite.hpp  Id.cpp  Id.hpp  Object.hpp  Object.tpl  ObjectTest.cpp  StringList.cpp  StringList.hpp  StringListTest.cpp
src/linalg/: AutoMatrix.cpp  AutoMatrix.hpp  AutoMatrixTest.cpp  AutoPermutation.cpp  AutoPermutation.hpp  AutoPermutationTest.cpp  AutoVector.cpp  AutoVector.hpp  AutoVectorTest.cpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  Permutation.cpp  Permutation.hpp  Vector.cpp  Vector.hpp  package.cpp  package.hpp  packageTest.cpp
src/log/: CMakeLists.txt  FileLogger.cpp  FileLogger.hpp  FileLoggerTest.cpp  Logger.cpp  Logger.hpp  LoggerTest.cpp
src/logging/: CMakeLists.txt  FileLogger.cpp  FileLogger.hpp  FileLoggerTest.cpp  Logger.cpp  Logger.hpp  LoggerTest.cpp  MultiLogger.cpp  MultiLogger.hpp  MultiLoggerTest.cpp  StreamLogger.cpp  StreamLogger.hpp  TestLogger.cpp  TestLogger.hpp
src/lookup/: CMakeLists.txt  ModelIndex.cpp  ModelIndex.hpp  ModelIndexTest.cpp  MutableModelIndex.cpp  MutableModelIndex.hpp  ResultStore.cpp  ResultStore.hpp  package.cpp  package.hpp
src/minimization/: CMakeLists.txt  GslMinimizerHolder.cpp  GslMinimizerHolder.hpp  GslMinimizerHolderTest.cpp  GslMinimizerRetriever.cpp  GslMinimizerRetriever.hpp  Minimizable.cpp  Minimizable.hpp  MinimizableTest.cpp  Minimizer.cpp  Minimizer.hpp  MinimizerTest.cpp  TestMinimizable.cpp  TestMinimizable.hpp  package.hpp
src/parser/: BoolParslet.cpp  BoolParslet.hpp  CMakeLists.txt  ChoiceParslet.cpp  ChoiceParslet.hpp  ConfigParser.cpp  ConfigParser.hpp  DoubleParslet.cpp  DoubleParslet.hpp  IntParslet.cpp  IntParslet.hpp  NameParslet.cpp  NameParslet.hpp  Parslet.cpp  Parslet.hpp  ParsletTemplate.cpp  ParsletTemplate.hpp  SectionParslet.cpp  SectionParslet.hpp  SizeTypeParslet.cpp  SizeTypeParslet.hpp  StringParslet.cpp  StringParslet.hpp  VariableParslet.cpp  VariableParslet.hpp  VectorParslet.cpp  VectorStringParslet.cpp  VectorStringParslet.hpp  parsetest.cpp
src/search/: CMakeLists.txt  Search.cpp  Search.hpp
src/search/egreedy/: CMakeLists.txt  ElaboratedGreedy.cpp  ElaboratedGreedy.hpp
src/search/genetica/: CMakeLists.txt  GA.cpp  GA.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp
src/search/memetica/: CMakeLists.txt  MA.cpp  MA.hpp  MemeticAlgorithm.cpp  MemeticAlgorithm.hpp
src/util/: Array.hpp  Array.tpl  ArrayTest.cpp  CMakeLists.txt  Cache.cpp  Cache.hpp  CacheTest.cpp  LogFactorial.cpp  LogFactorial.hpp  LogFactorialTest.cpp  ReferenceCounted.cpp  ReferenceCounted.hpp  ReferenceCountedTest.cpp
src/valuation/: CMakeLists.txt  CachingValuation.cpp  CachingValuation.hpp  CachingValuationTest.cpp  TestValuation.cpp  TestValuation.hpp  Valuation.cpp  Valuation.hpp
