add_library( io OBJECT
	DescriptorInput.hpp
	DescriptorInput.cpp
	Input.hpp
	DescriptorOutput.hpp
	DescriptorOutput.cpp
	Output.hpp
	IOHelper.hpp
	IOHelper.cpp
	InputAdapter.hpp
	InputAdapter.cpp
	OutputAdapter.hpp
	OutputAdapter.cpp
	RandomInput.hpp
	RandomInput.cpp
	PlinkConstants.hpp
	PlinkConstants.cpp
	PlinkInput.hpp
	PlinkInput.cpp
	PlinkOutput.hpp
	PlinkOutput.cpp
	Hdf5Constants.cpp
	Hdf5Constants.hpp
	Hdf5Input.hpp
	Hdf5Input.cpp
	Hdf5Output.hpp
	Hdf5Output.cpp
)
