add_library( parser OBJECT BoolParslet.cpp BoolParslet.hpp ChoiceParslet.cpp ChoiceParslet.hpp ConfigParser.cpp ConfigParser.hpp DoubleParslet.cpp DoubleParslet.hpp IntParslet.cpp IntParslet.hpp NameParslet.cpp NameParslet.hpp Parslet.cpp Parslet.hpp ParsletTemplate.cpp ParsletTemplate.hpp SectionParslet.cpp SectionParslet.hpp StringParslet.cpp StringParslet.hpp VariableParslet.cpp VariableParslet.hpp VectorParslet.cpp VectorParslet.hpp VectorStringParslet.cpp VectorStringParslet.hpp )
