add_library( parser OBJECT
	BoolParslet.hpp
	BoolParslet.cpp
	ChoiceParslet.hpp
	ChoiceParslet.cpp
	ConfigParser.hpp
	ConfigParser.cpp
	DoubleParslet.hpp
	DoubleParslet.cpp
	IntParslet.hpp
	IntParslet.cpp
	SizeTypeParslet.hpp
	SizeTypeParslet.cpp
	NameParslet.hpp
	NameParslet.cpp
	Parslet.hpp
	Parslet.cpp
	ParsletTemplate.hpp
	ParsletTemplate.cpp
	SectionParslet.hpp
	SectionParslet.cpp
	StringParslet.hpp
	StringParslet.cpp
	VariableParslet.hpp
	VariableParslet.cpp
	VectorParslet.hpp
	VectorParslet.cpp
	VectorStringParslet.hpp
	VectorStringParslet.cpp
)
